<resources>
    <string name="app_name">Chain Reaction</string>

    <string name="title_chain">Chain</string>
    <string name="title_reaction">Reaction</string>

    <string name="coming_soon">This feature is coming soon!</string>
    <string name="ok">Okay</string>

    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_retype_password">Retype Password</string>

    <string name="login_toast">Logged in as %1$s</string>

    <string name="scorekeeper_text">Score: %1$d</string>

    <string name="cancel">Cancel</string>

    <string name="word_hint_dialog">Current phrase: %1$s %2$s</string>
    <string name="guess_dialog_guess">Guess</string>

    <string name="login">Login</string>
    <string name="login_register_text">No account? <b><i>Register</i></b> or play offline.</string>
    <string name="play_offline">Play Offline</string>
    <string name="no_account_text">No account? </string>
    <string name="register_text">Register</string>
    <string name="play_offline_text"> or play offline</string>

    <string name="create_account">Create Account</string>
    <string name="register_login">Already have an account? Login</string>
    <string name="title_activity_signin">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_username">This username does not exist</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_home">HomeActivity</string>

    <!-- Strings related to home screen -->
    <string name="single_player">Single Player</string>
    <string name="two_player">Two Player</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="highscores">Highscores</string>
    <string name="Settings">Settings</string>

    <!-- Strings related to difficulty settings -->
    <string name="difficulty">Difficulty</string>
    <string name="mode">Mode</string>
    <string-array name="classic_difficulty">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>

    <string-array name="game_modes">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>

    <!-- Login Shared Prefs -->
    <string name="LOGIN_PREFS">a450sp16team2.tacoma.uw.edu.chainreaction.PREFS</string>
    <string name="LOGGEDIN">loggedin</string>
    <string name="LOGGEDIN_USERNAME">login_username</string>
    <string name="LOGGEDIN_PASSWORD">login_password</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->
    <string name="pref_ui_title">User Interface</string>
    <string name="pref_title_theme">Theme</string>
    <string name="pref_account_title">Account Settings</string>
    <string name="pref_summary_delete_account">Delete account from our database</string>
    <string name="pref_title_delete_account">Delete Account</string>
    <string name="pref_summary_logout">Logout of your account</string>
    <string name="pref_title_logout">Logout</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="logout_key">pref_key_logout</string>
    <string name="title_activity_highscore">Highscores</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- Highscore strings -->
    <string name="rank">Rank</string>
    <string name="user">User</string>
    <string name="score">Score</string>
    <string name="local_highscore_placeholder_text">No highscores have been recorder yet</string>

    <string name="local_highscores">Local Highscores</string>
    <string name="tab0">@string/local_highscores</string>

    <!-- SQLite queries -->
    <string name="CREATE_LOCALHIGHSCORES_SQL">
        CREATE TABLE IF NOT EXISTS LocalHighscores
        (_id INTEGER PRIMARY KEY AUTOINCREMENT, username STRING, score INTEGER);
    </string>

    <string name="DROP_LOCALHIGHSCORES_SQL">
        DROP TABLE IF EXISTS LocalHighscores
    </string>

    <string name="score_save_success">Score successfully saved!</string>
    <string name="score_save_failed">Score not saved :(</string>



</resources>