<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="a450sp16team2.tacoma.uw.edu.chainreaction.HomeActivity"
    tools:showIn="@layout/activity_home">

    <TextView
        android:text="@string/title_chain"
        android:textSize="40sp"
        android:gravity="center"
        android:layout_marginTop="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/title_reaction"
        android:textSize="40sp"
        android:gravity="center"
        android:layout_marginBottom="80dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_singleplayer"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/single_player"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@color/multiplayer_container_color"

        android:paddingTop="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/two_player"
            android:textSize="18sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_online"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:text="@string/online"/>
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_offline"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:text="@string/offline"/>
        </LinearLayout>

    </LinearLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_highscores"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:text="@string/highscores"/>
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_settings"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:text="@string/Settings"/>





</LinearLayout>
