<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingTop="48dp"
    android:id="@+id/login_frame"
    tools:context=".authenticate.LoginActivity">

    <!-- Login progress -->

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/login_form"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:id="@+id/username_login_form"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <TextView
                android:text="@string/title_chain"
                android:textSize="40sp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/title_reaction"
                android:textSize="40sp"
                android:gravity="center"
                android:layout_marginBottom="@dimen/login_logo_margin_bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/logintext_top_margin"
                android:layout_marginBottom="@dimen/logintext_bottom_margin"
                android:hint="@string/prompt_username">
                <android.support.design.widget.TextInputEditText android:id="@+id/input_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1"
                    android:maxLength="@integer/max_username_length"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/logintext_top_margin"
                android:layout_marginBottom="@dimen/logintext_bottom_margin"
                android:hint="@string/prompt_password">
                <android.support.design.widget.TextInputEditText android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:maxLines="1"
                    android:maxLength="@integer/max_password_length"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:text="@string/login"
                android:layout_marginTop="24dp"
                android:padding="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_play_offline"
                android:text="@string/play_offline"
                android:layout_marginBottom="24dp"
                android:padding="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView android:id="@+id/link_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:text="@string/login_register_text"
                android:gravity="center"
                android:textSize="16sp"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>