<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingTop="48dp"
    tools:context=".authenticate.RegisterActivity">

    <!-- Login progress -->

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/register_form"
        android:background="@color/colorPrimary"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:fitsSystemWindows="true">
        <!--android:paddingBottom="@dimen/activity_vertical_margin"-->
        <!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
        <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
        <!--android:paddingTop="@dimen/activity_vertical_margin"-->


        <LinearLayout
            android:id="@+id/username_register_form"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <TextView
                android:text="@string/title_chain"
                android:textSize="40sp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/title_reaction"
                android:textSize="40sp"
                android:gravity="center"
                android:layout_marginBottom="@dimen/register_logo_margin_bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!--<android.support.design.widget.TextInputEditText-->
            <!--android:layout_marginTop="@dimen/login_top_padding"-->
            <!--android:layout_marginBottom="@dimen/login_bottom_padding"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:hint="@string/prompt_username">-->
            <!--<EditText-->
            <!--android:id="@+id/input_username"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content" />-->
            <!--</android.support.design.widget.TextInputEditText>-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/logintext_top_margin"
                android:layout_marginBottom="@dimen/logintext_bottom_margin">
                <EditText android:id="@+id/input_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/prompt_username"
                    android:maxLines="1"
                    android:maxLength="@integer/max_username_length"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/logintext_top_margin">
                <EditText android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/prompt_password"
                    android:maxLines="1"
                    android:maxLength="@integer/max_password_length"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/logintext_bottom_margin">
                <EditText android:id="@+id/input_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/prompt_retype_password"
                    android:maxLines="1"
                    android:maxLength="@integer/max_password_length"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_create_account"
                android:text="@string/create_account"
                android:layout_marginTop="24dp"
                android:padding="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.AppCompatButton
                android:id="@id/btn_play_offline"
                android:text="@string/play_offline"
                android:layout_marginBottom="24dp"
                android:padding="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView android:id="@+id/link_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:text="@string/register_login"
                android:gravity="center"
                android:textSize="16sp"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>