<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:background="?attr/colorPrimary">
        <TextView
            android:id="@+id/highscore_rank_label"
            android:layout_width="0dp"
            android:layout_weight=".50"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/rank"
            android:textAppearance="?attr/textAppearanceListItem" />
        <TextView
            android:id="@+id/highscore_username_label"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/user"
            android:textAppearance="?attr/textAppearanceListItem" />

        <TextView
            android:id="@+id/highscore_score_label"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/score"
            android:textAppearance="?attr/textAppearanceListItem" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/highscore_recycler_view"
        android:name="a450sp16team2.tacoma.uw.edu.chainreaction.LocalHighscoreFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:scrollbars="vertical"
        app:layoutManager="LinearLayoutManager"
        tools:context="a450sp16team2.tacoma.uw.edu.chainreaction.LocalHighScoreFragment"
        tools:listitem="@layout/highscore_list_item" />
</LinearLayout>

